//
//  EditFolderAccessibilityIdentifier.swift
//  Memory
//
//  Created by Anton Semenov on 07.03.2025.
//

public enum EditFolderAccessibilityIdentifier {
    public static let title = "editFolderTitle"
    public static let cancelButton = "editFolderCancelButton"
    public static let saveButton = "editFolderSaveButton"
    public static let nameField = "editFolderNameField"
    public static let descriptionField = "editFolderDescriptionField"
    public static let iconField = "editFolderIconField"
    public static let isFavoriteSwitch = "editFolderIsFavoriteSwitch"
}
