//
//  FolderDetailsAccessibilityIdentifier.swift
//  Memory
//
//  Created by Anton Semenov on 07.03.2025.
//

public enum FolderDetailsAccessibilityIdentifier {
    public static let options = "folderDetailsOptions"
    public static let editButton = "folderDetailsEditButton"
    public static let cancelButton = "folderDetailsCancelButton"
    public static let deleteButton = "folderDetailsDeleteButton"
    public static let collectionView = "folderDetailsCollectionView"
    public static let nameTitle = "folderDetailsNameTitle"
    public static let nameValue = "folderDetailsNameValue"
    public static let iconTitle = "folderDetailsIconTitle"
    public static let iconValue = "folderDetailsIconValue"
    public static let descriptionTitle = "folderDetailsDescriptionTitle"
    public static let descriptionValue = "folderDetailsDescriptionValue"
    public static let addCategoryButton = "folderDetailsAddCategoryButton"

    public static func categoryCell(id: Int) -> String {
        "category_cell_\(id)"
    }
}
